# gostcoin-minerd-android

./: local.properties  settings.gradle
app/: build.gradle
app/nativelib/: .gitignore  GUIDE.txt  Makefile  Makefile.in  Xcoin.c  aclocal.m4  build.gradle  compat.h  compil.bat  compile_.txt  config.status  configure  cpuminer-config.h  cpuminer-config.h.in  gost.c  minerd
app/nativelib/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
app/nativelib/compat/: Makefile  Makefile.in
app/nativelib/compat/curl-win-x86/lib/: libcurl.la
app/nativelib/compat/jansson/: Makefile  Makefile.in
app/nativelib/jansson-2.14/: Makefile  config.status  libtool
app/nativelib/jansson-2.14/doc/: Makefile
app/nativelib/jansson-2.14/src/: Makefile  dump.lo  error.lo  hashtable.lo  hashtable_seed.lo  libjansson.la  load.lo  memory.lo  pack_unpack.lo  strbuffer.lo  strconv.lo  value.lo  version.lo
app/nativelib/jansson-2.14/test/: Makefile
app/nativelib/jansson-2.14/test/ossfuzz/: Makefile
app/nativelib/jansson-2.14/test/suites/: Makefile
app/nativelib/src/main/cpp/: CMakeLists.txt  cpuminer.cpp
app/nativelib/zlib-master/: update_zlib.sh
app/nativelib/zlib-master/src/: Makefile
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  (+1 more)
app/src/main/res/values-night/: themes.xml
cpuminer/cpuminer-gostd-master/: Makefile.am  README.md  cpu-miner.c  miner.h  quark.c  util.c
cpuminer/cpuminer-gostd-master/compat/curl-win-x86_64/lib/: libcurl.la
gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
